<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tsui.louis.modernartui.ModernArtActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/modernart_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <SeekBar
        android:id="@+id/seek_colour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:max="255" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="210dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/modernart_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/cyan_rect"
        android:src="@drawable/cyan_shape" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="210dp"
        android:id="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/magenta_rect"
        android:src="@drawable/magenta_shape" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="125dp"
        android:id="@+id/imageView3"
        android:layout_below="@+id/modernart_toolbar"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/orange_rect"
        android:src="@drawable/orange_shape" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="125dp"
        android:id="@+id/imageView4"
        android:layout_below="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/light_grey_rect"
        android:src="@drawable/light_gray_shape" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:id="@+id/imageView5"
        android:layout_below="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/lime_rect"
        android:src="@drawable/lime_shape" />

</RelativeLayout>
